# HackEurope2026

./: .gitignore  LICENSE  README.md  compose.yml  main.py
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  .miro_mcp_client.json  .miro_mcp_tokens.json  .pre-commit-config.yaml  Dockerfile  agentexample.py  configuration.py  ingestion_service.py  main.py  pyproject.toml
backend/agents/: agentexample.py  interviewer.py
backend/api/routes/: interview.py  tavus.py
backend/db/: dao.py
backend/scripts/: setup_persona.py
backend/services/: tavus_client.py
backend/src/: configuration.py
backend/src/agents/: diagram_agent.py  interview_agent.py  interviewer.py
backend/src/api/routes/: interview.py  tavus.py
backend/src/db/: dao.py
backend/src/scripts/: setup_persona.py
backend/src/services/: ingestion_service.py  interview_preperation.py  miro_mcp_auth.py  miro_service.py  mock_tasks.py  tavus_client.py
backend/src/types/: dto.py
backend/types/: cases.py  dto.py
data/: interview_questions.md
docs/: architectural_design.md  repository-analysis.md  sequence-diagram.puml  tavusReactHooksDoc.md  tavusdocumentation.md
frontend/hackeurope/: Dockerfile  components.json  package.json  pnpm-lock.yaml
frontend/hackeurope/app/: globals.css  page.tsx
frontend/hackeurope/app/components/cvi/hooks/: cvi-events-hooks.tsx
frontend/hackeurope/app/interview/: page.tsx
frontend/hackeurope/components/: ChatWindow.tsx  InterviewReport.tsx  InterviewRoom.tsx  MessageInput.tsx  nav-dock.tsx
frontend/hackeurope/components/icons/: lucide-code-xml.tsx  lucide-network.tsx
frontend/hackeurope/hooks/: cvi-events-hooks.ts  use-cvi-call.ts
