[project]
name = "backend"
version = "0.1.0"
description = "HackEurope2026 backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "firecrawl>=4.16.0",
    "langchain>=1.2.10",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
include = ["api*", "agents*"]
