[project]
name = "backend"
version = "0.1.0"
description = "HackEurope2026 backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.3",
    "fastapi[standard]>=0.115",
    "firecrawl>=4.16.0",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langsmith[openai-agents]>=0.7.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "aiohttp>=3.13.3",
]

[tool.setuptools.packages.find]
include = ["api*", "agents*"]



[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
